--- a/Contact.html
+++ b/Contact.html
@@ -19,15 +19,24 @@
             <h1 class="h11">Your Name</h1>
 
         </div>
-        <div class="link">
+        <ul class="link">
 
-            <a href="./indexx.html" class="a1">Abaut  |</a>
-            <a href="./portofolio.html" class="a1">Portofolio  |</a>
+            <li>
+                <a href="./indexx.html" class="a1">Abaut
+                </a>
+            </li>
+            <li>
+                <a href="./portofolio.html" class="a1"> Portofolio  </a>
+            </li>
+          
+            <li>
+                <a href="./Contact.html" class="a1">Contact</a>
 
-            <a href="./Contact.html" class="a1">Contact</a>
+            </li>
 
-        </div>
 
+
+        </ul>
     </header>
 
     <section class="sec1">
